# pdfredline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: comments.json  make_sample_pdf.py
src/pdfredline/: __init__.py  annotate.py  cli.py  schema.py  strip.py  verify.py
tests/: conftest.py  test_apply.py  test_cli.py  test_schema.py  test_strip_verify.py
