[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfredline"
version = "0.1.0"
description = "Pin review comments onto PDFs as real, clickable annotations driven by a JSON sidecar file."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]
keywords = ["pdf", "annotation", "review", "redline", "comments"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
pdfredline = "pdfredline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfredline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
